[project]
name = "langchain-course"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "black>=26.5.1",
    "isort>=8.0.1",
    "langchain>=1.3.10",
    "langchain-google-genai>=4.2.5",
    "langchain-mistralai>=1.1.5",
    "langchain-nvidia-ai-endpoints>=1.4.1",
    "langchain-openai>=1.3.2",
    "python-dotenv>=1.2.2",
]
